seaqt/QtGui/gen_qtextobject.h

typedef QTextFrame::iterator QTextFrame__iterator;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextBlockUserData QTextBlockUserData;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextFrameLayoutData QTextFrameLayoutData;
typedef struct QTextLayout QTextLayout;
typedef struct QTextList QTextList;
typedef struct QTextObject QTextObject;
typedef struct QTimerEvent QTimerEvent;
QMetaObject* QTextObject_metaObject(const QTextObject* self);
void* QTextObject_metacast(QTextObject* self, const char* param1);
int QTextObject_metacall(QTextObject* self, int param1, int param2, void** param3);
struct miqt_string QTextObject_tr(const char* s);
QTextFormat* QTextObject_format(const QTextObject* self);
int QTextObject_formatIndex(const QTextObject* self);
QTextDocument* QTextObject_document(const QTextObject* self);
int QTextObject_objectIndex(const QTextObject* self);
struct miqt_string QTextObject_tr2(const char* s, const char* c);
struct miqt_string QTextObject_tr3(const char* s, const char* c, int n);
const QMetaObject* QTextObject_staticMetaObject();
QMetaObject* QTextBlockGroup_metaObject(const QTextBlockGroup* self);
void* QTextBlockGroup_metacast(QTextBlockGroup* self, const char* param1);
int QTextBlockGroup_metacall(QTextBlockGroup* self, int param1, int param2, void** param3);
struct miqt_string QTextBlockGroup_tr(const char* s);
struct miqt_string QTextBlockGroup_tr2(const char* s, const char* c);
struct miqt_string QTextBlockGroup_tr3(const char* s, const char* c, int n);
const QMetaObject* QTextBlockGroup_staticMetaObject();
void QTextFrameLayoutData_operatorAssign(QTextFrameLayoutData* self, QTextFrameLayoutData* param1);
void QTextFrameLayoutData_delete(QTextFrameLayoutData* self);
typedef struct VirtualQTextFrame VirtualQTextFrame;
typedef struct QTextFrame_VTable{
	void (*destructor)(VirtualQTextFrame* self);
	QMetaObject* (*metaObject)(const VirtualQTextFrame* self);
	void* (*metacast)(VirtualQTextFrame* self, const char* param1);
	int (*metacall)(VirtualQTextFrame* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQTextFrame* self, QEvent* event);
	bool (*eventFilter)(VirtualQTextFrame* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQTextFrame* self, QTimerEvent* event);
	void (*childEvent)(VirtualQTextFrame* self, QChildEvent* event);
	void (*customEvent)(VirtualQTextFrame* self, QEvent* event);
	void (*connectNotify)(VirtualQTextFrame* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTextFrame* self, QMetaMethod* signal);
}QTextFrame_VTable;
VirtualQTextFrame* QTextFrame_new(const QTextFrame_VTable* vtbl, size_t vdata, QTextDocument* doc);
QMetaObject* QTextFrame_metaObject(const QTextFrame* self);
void* QTextFrame_metacast(QTextFrame* self, const char* param1);
int QTextFrame_metacall(QTextFrame* self, int param1, int param2, void** param3);
struct miqt_string QTextFrame_tr(const char* s);
void QTextFrame_setFrameFormat(QTextFrame* self, QTextFrameFormat* format);
QTextFrameFormat* QTextFrame_frameFormat(const QTextFrame* self);
QTextCursor* QTextFrame_firstCursorPosition(const QTextFrame* self);
QTextCursor* QTextFrame_lastCursorPosition(const QTextFrame* self);
int QTextFrame_firstPosition(const QTextFrame* self);
int QTextFrame_lastPosition(const QTextFrame* self);
QTextFrameLayoutData* QTextFrame_layoutData(const QTextFrame* self);
void QTextFrame_setLayoutData(QTextFrame* self, QTextFrameLayoutData* data);
struct miqt_array /* of QTextFrame* */  QTextFrame_childFrames(const QTextFrame* self);
QTextFrame* QTextFrame_parentFrame(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_begin(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_end(const QTextFrame* self);
struct miqt_string QTextFrame_tr2(const char* s, const char* c);
struct miqt_string QTextFrame_tr3(const char* s, const char* c, int n);
QMetaObject* QTextFrame_virtualbase_metaObject(const VirtualQTextFrame* self);
void* QTextFrame_virtualbase_metacast(VirtualQTextFrame* self, const char* param1);
int QTextFrame_virtualbase_metacall(VirtualQTextFrame* self, int param1, int param2, void** param3);
bool QTextFrame_virtualbase_event(VirtualQTextFrame* self, QEvent* event);
bool QTextFrame_virtualbase_eventFilter(VirtualQTextFrame* self, QObject* watched, QEvent* event);
void QTextFrame_virtualbase_timerEvent(VirtualQTextFrame* self, QTimerEvent* event);
void QTextFrame_virtualbase_childEvent(VirtualQTextFrame* self, QChildEvent* event);
void QTextFrame_virtualbase_customEvent(VirtualQTextFrame* self, QEvent* event);
void QTextFrame_virtualbase_connectNotify(VirtualQTextFrame* self, QMetaMethod* signal);
void QTextFrame_virtualbase_disconnectNotify(VirtualQTextFrame* self, QMetaMethod* signal);
void QTextFrame_protectedbase_setFormat(VirtualQTextFrame* self, QTextFormat* format);
QObject* QTextFrame_protectedbase_sender(const VirtualQTextFrame* self);
int QTextFrame_protectedbase_senderSignalIndex(const VirtualQTextFrame* self);
int QTextFrame_protectedbase_receivers(const VirtualQTextFrame* self, const char* signal);
bool QTextFrame_protectedbase_isSignalConnected(const VirtualQTextFrame* self, QMetaMethod* signal);
const QMetaObject* QTextFrame_staticMetaObject();
void QTextFrame_delete(QTextFrame* self);
void QTextBlockUserData_operatorAssign(QTextBlockUserData* self, QTextBlockUserData* param1);
void QTextBlockUserData_delete(QTextBlockUserData* self);
void QTextBlock_operatorAssign(QTextBlock* self, QTextBlock* o);
bool QTextBlock_isValid(const QTextBlock* self);
bool QTextBlock_operatorEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_operatorNotEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_operatorLesser(const QTextBlock* self, QTextBlock* o);
int QTextBlock_position(const QTextBlock* self);
int QTextBlock_length(const QTextBlock* self);
bool QTextBlock_contains(const QTextBlock* self, int position);
QTextLayout* QTextBlock_layout(const QTextBlock* self);
void QTextBlock_clearLayout(QTextBlock* self);
QTextBlockFormat* QTextBlock_blockFormat(const QTextBlock* self);
int QTextBlock_blockFormatIndex(const QTextBlock* self);
QTextCharFormat* QTextBlock_charFormat(const QTextBlock* self);
int QTextBlock_charFormatIndex(const QTextBlock* self);
int QTextBlock_textDirection(const QTextBlock* self);
struct miqt_string QTextBlock_text(const QTextBlock* self);
struct miqt_array /* of QTextLayout__FormatRange* */  QTextBlock_textFormats(const QTextBlock* self);
QTextDocument* QTextBlock_document(const QTextBlock* self);
QTextList* QTextBlock_textList(const QTextBlock* self);
QTextBlockUserData* QTextBlock_userData(const QTextBlock* self);
void QTextBlock_setUserData(QTextBlock* self, QTextBlockUserData* data);
int QTextBlock_userState(const QTextBlock* self);