seaqt/QtGui/gen_qtextobject.nim


proc fcQTextObject_metaObject(self: pointer, ): pointer {.importc: "QTextObject_metaObject".}
proc fcQTextObject_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextObject_metacast".}
proc fcQTextObject_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextObject_metacall".}
proc fcQTextObject_tr(s: cstring): struct_miqt_string {.importc: "QTextObject_tr".}
proc fcQTextObject_trUtf8(s: cstring): struct_miqt_string {.importc: "QTextObject_trUtf8".}
proc fcQTextObject_format(self: pointer, ): pointer {.importc: "QTextObject_format".}
proc fcQTextObject_formatIndex(self: pointer, ): cint {.importc: "QTextObject_formatIndex".}
proc fcQTextObject_document(self: pointer, ): pointer {.importc: "QTextObject_document".}
proc fcQTextObject_objectIndex(self: pointer, ): cint {.importc: "QTextObject_objectIndex".}
proc fcQTextObject_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextObject_tr2".}
proc fcQTextObject_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextObject_tr3".}
proc fcQTextObject_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextObject_trUtf82".}
proc fcQTextObject_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextObject_trUtf83".}
proc fcQTextObject_protectedbase_setFormat(self: pointer, format: pointer): void {.importc: "QTextObject_protectedbase_setFormat".}
proc fcQTextObject_protectedbase_sender(self: pointer, ): pointer {.importc: "QTextObject_protectedbase_sender".}
proc fcQTextObject_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTextObject_protectedbase_senderSignalIndex".}
proc fcQTextObject_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTextObject_protectedbase_receivers".}
proc fcQTextObject_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTextObject_protectedbase_isSignalConnected".}
proc fcQTextObject_staticMetaObject(): pointer {.importc: "QTextObject_staticMetaObject".}
proc fcQTextBlockGroup_metaObject(self: pointer, ): pointer {.importc: "QTextBlockGroup_metaObject".}
proc fcQTextBlockGroup_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextBlockGroup_metacast".}
proc fcQTextBlockGroup_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextBlockGroup_metacall".}
proc fcQTextBlockGroup_tr(s: cstring): struct_miqt_string {.importc: "QTextBlockGroup_tr".}
proc fcQTextBlockGroup_trUtf8(s: cstring): struct_miqt_string {.importc: "QTextBlockGroup_trUtf8".}
proc fcQTextBlockGroup_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextBlockGroup_tr2".}
proc fcQTextBlockGroup_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextBlockGroup_tr3".}
proc fcQTextBlockGroup_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextBlockGroup_trUtf82".}
proc fcQTextBlockGroup_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextBlockGroup_trUtf83".}
proc fcQTextBlockGroup_protectedbase_blockList(self: pointer, ): struct_miqt_array {.importc: "QTextBlockGroup_protectedbase_blockList".}
proc fcQTextBlockGroup_protectedbase_setFormat(self: pointer, format: pointer): void {.importc: "QTextBlockGroup_protectedbase_setFormat".}
proc fcQTextBlockGroup_protectedbase_sender(self: pointer, ): pointer {.importc: "QTextBlockGroup_protectedbase_sender".}
proc fcQTextBlockGroup_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTextBlockGroup_protectedbase_senderSignalIndex".}
proc fcQTextBlockGroup_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTextBlockGroup_protectedbase_receivers".}
proc fcQTextBlockGroup_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTextBlockGroup_protectedbase_isSignalConnected".}
proc fcQTextBlockGroup_staticMetaObject(): pointer {.importc: "QTextBlockGroup_staticMetaObject".}
proc fcQTextFrameLayoutData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QTextFrameLayoutData_operatorAssign".}
proc fcQTextFrameLayoutData_delete(self: pointer) {.importc: "QTextFrameLayoutData_delete".}
proc fcQTextFrame_metaObject(self: pointer, ): pointer {.importc: "QTextFrame_metaObject".}
proc fcQTextFrame_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextFrame_metacast".}
proc fcQTextFrame_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextFrame_metacall".}
proc fcQTextFrame_tr(s: cstring): struct_miqt_string {.importc: "QTextFrame_tr".}
proc fcQTextFrame_trUtf8(s: cstring): struct_miqt_string {.importc: "QTextFrame_trUtf8".}
proc fcQTextFrame_setFrameFormat(self: pointer, format: pointer): void {.importc: "QTextFrame_setFrameFormat".}
proc fcQTextFrame_frameFormat(self: pointer, ): pointer {.importc: "QTextFrame_frameFormat".}
proc fcQTextFrame_firstCursorPosition(self: pointer, ): pointer {.importc: "QTextFrame_firstCursorPosition".}
proc fcQTextFrame_lastCursorPosition(self: pointer, ): pointer {.importc: "QTextFrame_lastCursorPosition".}
proc fcQTextFrame_firstPosition(self: pointer, ): cint {.importc: "QTextFrame_firstPosition".}
proc fcQTextFrame_lastPosition(self: pointer, ): cint {.importc: "QTextFrame_lastPosition".}
proc fcQTextFrame_layoutData(self: pointer, ): pointer {.importc: "QTextFrame_layoutData".}
proc fcQTextFrame_setLayoutData(self: pointer, data: pointer): void {.importc: "QTextFrame_setLayoutData".}
proc fcQTextFrame_childFrames(self: pointer, ): struct_miqt_array {.importc: "QTextFrame_childFrames".}
proc fcQTextFrame_parentFrame(self: pointer, ): pointer {.importc: "QTextFrame_parentFrame".}
proc fcQTextFrame_begin(self: pointer, ): pointer {.importc: "QTextFrame_begin".}
proc fcQTextFrame_endX(self: pointer, ): pointer {.importc: "QTextFrame_end".}
proc fcQTextFrame_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextFrame_tr2".}
proc fcQTextFrame_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextFrame_tr3".}
proc fcQTextFrame_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextFrame_trUtf82".}
proc fcQTextFrame_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextFrame_trUtf83".}
type cQTextFrameVTable = object
  destructor*: proc(vtbl: ptr cQTextFrameVTable, self: ptr cQTextFrame) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQTextFrame_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QTextFrame_virtualbase_metaObject".}
proc fcQTextFrame_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextFrame_virtualbase_metacast".}
proc fcQTextFrame_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextFrame_virtualbase_metacall".}
proc fcQTextFrame_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QTextFrame_virtualbase_event".}
proc fcQTextFrame_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QTextFrame_virtualbase_eventFilter".}
proc fcQTextFrame_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QTextFrame_virtualbase_timerEvent".}
proc fcQTextFrame_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QTextFrame_virtualbase_childEvent".}
proc fcQTextFrame_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QTextFrame_virtualbase_customEvent".}
proc fcQTextFrame_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QTextFrame_virtualbase_connectNotify".}
proc fcQTextFrame_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QTextFrame_virtualbase_disconnectNotify".}
proc fcQTextFrame_protectedbase_setFormat(self: pointer, format: pointer): void {.importc: "QTextFrame_protectedbase_setFormat".}
proc fcQTextFrame_protectedbase_sender(self: pointer, ): pointer {.importc: "QTextFrame_protectedbase_sender".}
proc fcQTextFrame_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTextFrame_protectedbase_senderSignalIndex".}
proc fcQTextFrame_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTextFrame_protectedbase_receivers".}
proc fcQTextFrame_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTextFrame_protectedbase_isSignalConnected".}
proc fcQTextFrame_new(vtbl: pointer, doc: pointer): ptr cQTextFrame {.importc: "QTextFrame_new".}
proc fcQTextFrame_staticMetaObject(): pointer {.importc: "QTextFrame_staticMetaObject".}
proc fcQTextFrame_delete(self: pointer) {.importc: "QTextFrame_delete".}
proc fcQTextBlockUserData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QTextBlockUserData_operatorAssign".}
proc fcQTextBlockUserData_delete(self: pointer) {.importc: "QTextBlockUserData_delete".}
proc fcQTextBlock_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextBlock_operatorAssign".}
proc fcQTextBlock_isValid(self: pointer, ): bool {.importc: "QTextBlock_isValid".}
proc fcQTextBlock_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock_operatorEqual".}
proc fcQTextBlock_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock_operatorNotEqual".}
proc fcQTextBlock_operatorLesser(self: pointer, o: pointer): bool {.importc: "QTextBlock_operatorLesser".}
proc fcQTextBlock_position(self: pointer, ): cint {.importc: "QTextBlock_position".}
proc fcQTextBlock_length(self: pointer, ): cint {.importc: "QTextBlock_length".}
proc fcQTextBlock_contains(self: pointer, position: cint): bool {.importc: "QTextBlock_contains".}
proc fcQTextBlock_layout(self: pointer, ): pointer {.importc: "QTextBlock_layout".}
proc fcQTextBlock_clearLayout(self: pointer, ): void {.importc: "QTextBlock_clearLayout".}
proc fcQTextBlock_blockFormat(self: pointer, ): pointer {.importc: "QTextBlock_blockFormat".}
proc fcQTextBlock_blockFormatIndex(self: pointer, ): cint {.importc: "QTextBlock_blockFormatIndex".}
proc fcQTextBlock_charFormat(self: pointer, ): pointer {.importc: "QTextBlock_charFormat".}
proc fcQTextBlock_charFormatIndex(self: pointer, ): cint {.importc: "QTextBlock_charFormatIndex".}
proc fcQTextBlock_textDirection(self: pointer, ): cint {.importc: "QTextBlock_textDirection".}
proc fcQTextBlock_text(self: pointer, ): struct_miqt_string {.importc: "QTextBlock_text".}
proc fcQTextBlock_textFormats(self: pointer, ): struct_miqt_array {.importc: "QTextBlock_textFormats".}
proc fcQTextBlock_document(self: pointer, ): pointer {.importc: "QTextBlock_document".}
proc fcQTextBlock_textList(self: pointer, ): pointer {.importc: "QTextBlock_textList".}
proc fcQTextBlock_userData(self: pointer, ): pointer {.importc: "QTextBlock_userData".}
proc fcQTextBlock_setUserData(self: pointer, data: pointer): void {.importc: "QTextBlock_setUserData".}
proc fcQTextBlock_userState(self: pointer, ): cint {.importc: "QTextBlock_userState".}
